Update top image

--- a/assets/src/sass/base/_settings.scss
+++ b/assets/src/sass/base/_settings.scss
@@ -1,6 +1,7 @@
 :root {
     --color-text-light: #b1e1e6;
     --color-text-disabled: #434e5a;
+    --color-text-disabled-secondary: #47849e;
 }
 
 
