--- a/assets/src/sass/master.scss
+++ b/assets/src/sass/master.scss
@@ -14,6 +14,6 @@
 @import "base/helpers";
 
 // Any other module that can be reused multuple times.
-@import "components/window{";
+@import "components/window";
 @import "components/header";
 @import "components/buttons";
