Start work on the rest

--- a/assets/src/sass/components/_window.scss
+++ b/assets/src/sass/components/_window.scss
@@ -12,3 +12,7 @@ body,
     background: url('../images/668672.jpg') center center;
     background-size: cover;
 }
+
+.game-main {
+    padding: 2em 7.2em;
+}
