--- a/assets/src/sass/master.scss
+++ b/assets/src/sass/master.scss
@@ -16,4 +16,5 @@
 // Any other module that can be reused multuple times.
 @import "components/window";
 @import "components/header";
+@import "components/main";
 @import "components/buttons";
