--- a/assets/src/sass/master.scss
+++ b/assets/src/sass/master.scss
@@ -17,4 +17,5 @@
 @import "components/window";
 @import "components/header";
 @import "components/main";
+@import "components/portrait";
 @import "components/buttons";
